// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for /afrique/articles/cz216x22106o For the AMP platform I can see the server-rendered HTML 1`] = `
<html lang="fr"
      dir="ltr"
      amp
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          name="description"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="fr"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud - BBC News Afrique"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/afrique/articles/cz216x22106o"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcafrique"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcafrique"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud - BBC News Afrique"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-09-27T14:48:28.548Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-12T12:58:14.950Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud - BBC News Afrique
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/afrique/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/afrique/articles/cz216x22106o"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/afrique/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/afrique/articles/cz216x22106o","publisher":{"@type":"NewsMediaOrganization","name":"BBC News Afrique","publishingPrinciples":"https://www.bbc.com/afrique/institutionelles-49283281","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/afrique/articles/cz216x22106o","name":"CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud"},"headline":"CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud","datePublished":"2019-07-12T12:58:14.950Z","dateModified":"2019-09-27T14:48:28.548Z","author":{"@type":"NewsMediaOrganization","name":"BBC News Afrique","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"},"noBylinesPolicy":"https://www.bbc.com/afrique/institutionelles-49283281#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/cz216x22106o/p01k6msp/fr/amp"}
    </script>
    <script data-react-helmet="true"
            async
            custom-element="amp-iframe"
            src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    >
    </script>
    <style amp-boilerplate>
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style amp-boilerplate>
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script async
            src="https://cdn.ampproject.org/v0.js"
    >
    </script>
    <script async
            custom-element="amp-geo"
            src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-consent"
            src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-analytics"
            src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    >
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="AmpConsentWrapper-sc-18egs7-0 bfTTJR">
          <amp-geo layout="nodisplay">
            <script type="application/json">
              {"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"]}}
            </script>
          </amp-geo>
          <amp-consent id="consent"
                       layout="nodisplay"
          >
            <script type="application/json">
              {"consents":{"user-consent":{"promptIfUnknownForGeoGroup":"eea","promptUI":"consent-prompt"}}}
            </script>
            <div id="consent-prompt">
              <div dir="ltr"
                   id="privacy"
                   class="Wrapper-sc-7g3fro-0 fOqUqv"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Nous avons mis à jour nos politiques de confidentialité et de cookies
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 kOYkDy"
                  >
                    Nous avons apporté d'importants changements à notre politique de confidentialité et de cookies et nous voulons que vous sachiez ce que cela signifie pour vous et vos données.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iZFJYN"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:cookie.show, privacy.hide"
                      >
                        OK
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
                         on="tap:cookie.show, privacy.hide"
                      >
                        Découvrez ce qui a changé
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div dir="ltr"
                   hidden
                   id="cookie"
                   class="Wrapper-sc-7g3fro-0 fOqUqv"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Faites-nous savoir que vous acceptez les cookies
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 kOYkDy"
                  >
                    Nous utilisons
                    <a href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/">
                      cookies
                    </a>
                    &nbsp;pour vous offrir la meilleur expérience en ligne. Veuillez nous faire savoir si vous acceptez tous ces cookies.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iZFJYN"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:consent.accept"
                              data-cookie-banner="accept"
                      >
                        Oui, j'accepte
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                         on="tap:consent.reject"
                         data-cookie-banner="reject"
                      >
                        Non, dirigez-moi vers les réglages
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </amp-consent>
        </div>
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/afrique"
               class="StyledLink-m3awbo-2 dkNCcx"
            >
              <svg height="24"
                   viewbox="0 0 250.7 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 hSXWXp"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M187.89 6.24H189l4.74 10.63h-1.55l-1.41-3.13h-4.51l-1.32 3.13h-1.56zm2.22 6.15l-1.71-3.83-1.58 3.83zM195.73 6.3h5.64v1.34h-4.12v3h4.13v1.35h-4.12v4.93h-1.51zM204 16.87V6.3h2.65a3.82 3.82 0 0 1 2.55.79 2.66 2.66 0 0 1 .94 2.15 2.65 2.65 0 0 1-1.79 2.6 4.69 4.69 0 0 1 1 .91 18.31 18.31 0 0 1 1.36 2q.55.9.89 1.35l.56.76h-1.8l-.46-.7-.09-.13-.29-.42-.47-.77-.51-.83a8.18 8.18 0 0 0-.86-1 3.28 3.28 0 0 0-.7-.56 2.38 2.38 0 0 0-1.06-.17h-.39v4.6zm2-9.29h-.45v3.34h.58a4.27 4.27 0 0 0 1.58-.2 1.48 1.48 0 0 0 .67-.59 1.72 1.72 0 0 0 .24-.9 1.61 1.61 0 0 0-.26-.9 1.42 1.42 0 0 0-.75-.57 5.38 5.38 0 0 0-1.61-.18zM214.23 6.3h1.51v10.57h-1.51zM229.6 17.54L228.08 19a6.89 6.89 0 0 1-1.49-.25 9.8 9.8 0 0 1-1.57-.59 16.73 16.73 0 0 1-2.13-1.29 5.26 5.26 0 0 1-3.18-1.87 5.15 5.15 0 0 1-1.25-3.42 5.21 5.21 0 0 1 1.61-3.92 6.14 6.14 0 0 1 8.15 0 5.11 5.11 0 0 1 1.62 3.87 5.25 5.25 0 0 1-1.23 3.47 5.33 5.33 0 0 1-3.17 1.87l.4.15a8.76 8.76 0 0 0 2.69.72 3.38 3.38 0 0 0 1.07-.2zm-5.45-10a4 4 0 0 0-2.95 1.15 3.9 3.9 0 0 0-1.16 2.9 3.77 3.77 0 0 0 1.17 2.83 4.35 4.35 0 0 0 5.88 0 3.82 3.82 0 0 0 1.19-2.85 3.83 3.83 0 0 0-1.17-2.87 4.09 4.09 0 0 0-2.97-1.12zM239.92 6.3h1.52v6a7.14 7.14 0 0 1-.18 1.84 4 4 0 0 1-.44 1 3.32 3.32 0 0 1-.64.74 5.59 5.59 0 0 1-6.6 0 3.41 3.41 0 0 1-.64-.75 3.87 3.87 0 0 1-.43-1 7.49 7.49 0 0 1-.17-1.88v-6h1.52v6a4.46 4.46 0 0 0 .34 2.07 2.43 2.43 0 0 0 1 .93 3.59 3.59 0 0 0 1.64.35 3.32 3.32 0 0 0 2.19-.7 2.18 2.18 0 0 0 .64-.89 5.51 5.51 0 0 0 .2-1.76zM244.56 6.3h6v1.34h-4.48v3.22h4.33v1.35h-4.33v3.28h4.62v1.35h-6.14z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Afrique
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 foxPXR"
            >
              Aller au contenu
            </a>
          </div>
        </div>
      </header>
      <amp-analytics>
        <script type="application/json">
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"base":"https://logws1363.ati-host.net?","pageview":"\${base}s=598343&s2=3&p=afrique.articles.cz216x22106o.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:optimo:cz216x22106o]&x2=[amp]&x3=[news-afrique]&x4=[fr]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article]&x8=[simorgh]&x9=[CAN+2019+:+Le+Nigéria+file+en+demi-finales+au+détriment+de+l'Afrique+du+Sud]&x11=[2019-07-12T12:58:14.950Z]&x12=[2019-09-27T14:48:28.548Z]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <amp-analytics type="chartbeat">
        <script type="application/json">
          {"vars":{"domain":"test.bbc.co.uk","sections":"Afrique, Afrique - ART","uid":50924,"title":"CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud","virtualReferrer":"\${documentReferrer}","contentType":"New Article"}}
        </script>
      </amp-analytics>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 cBtcWN"
            >
              C'est le titre de cet article de test
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="Carte de France montrant Paris et Cognac"
                             attribution
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/2571/test/a4699550-e135-11e9-b23c-f1ac9644bb55.jpg"
                             height="351"
                             width="624"
                    >
                    </amp-img>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 emSaHV">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Légende image,
                    </span>
                    <p>
                      Cette image test, sous copyright BBC, montre une carte de la France. L'image est dans les trois premiers blocs et porte cette légende.
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-12"
                  class="StyledTimestamp-um718p-0 bAgcOD"
            >
              12 juillet 2019
            </time>
            <div>
              <time datetime="2019-09-27"
                    class="StyledTimestamp-um718p-0 bAgcOD"
              >
                Mise à jour 27 septembre 2019
              </time>
            </div>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Ceci est un bloc de texte contenant un lien URL vers
              <a href="https://www.bbc.co.uk/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                la page d'accueil BBC Weather
              </a>
              .
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <amp-iframe sandbox="allow-scripts allow-same-origin"
                            layout="fill"
                            scrolling="no"
                            frameborder="0"
                            src="https://polling.test.bbc.co.uk/ws/av-embeds/articles/cz216x22106o/p01k6msp/fr/amp"
                            title="Media player"
                            allowfullscreen="allowfullscreen"
                >
                  <amp-img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                           layout="fill"
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                           placeholder="true"
                           alt
                           height="16"
                           width="9"
                           attribution
                  >
                  </amp-img>
                  <noscript>
                    <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                      <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                           alt
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                           aria-hidden="true"
                           class="StyledImg-sc-7vx2mr-0 hIxkbt"
                      >
                      <div class="MessageWrapper-sc-1pnftlt-1 bHbRwS">
                        <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                          Pour regarder ce contenu, veuillez activer JavaScript ou essayer un autre navigateur.
                        </strong>
                      </div>
                    </div>
                  </noscript>
                </amp-iframe>
              </div>
              <figcaption class="Caption-sc-16x70so-0 emSaHV">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Légende vidéo,
                </span>
                <p>
                  Ceci est un bloc vidéo contenant une vidéo sur les fourmis
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="Ceci-est-un-bloc-de-soustitre"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 ihltMQ"
            >
              Ceci est un bloc de sous-titre
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="Footballeurs après un match"
                             attribution="Getty Images"
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/fef7/test/d4cc0ed0-e135-11e9-b23c-f1ac9644bb55.jpg"
                             height="1152"
                             width="2048"
                    >
                    </amp-img>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        Image source,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Cet article de test a été créé afin que nous puissions exécuter des tests automatisés de bout en bout sur notre site Web.
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/afrique"
               class="StyledLink-m3awbo-2 dkNCcx"
            >
              <svg height="24"
                   viewbox="0 0 250.7 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 hSXWXp"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M187.89 6.24H189l4.74 10.63h-1.55l-1.41-3.13h-4.51l-1.32 3.13h-1.56zm2.22 6.15l-1.71-3.83-1.58 3.83zM195.73 6.3h5.64v1.34h-4.12v3h4.13v1.35h-4.12v4.93h-1.51zM204 16.87V6.3h2.65a3.82 3.82 0 0 1 2.55.79 2.66 2.66 0 0 1 .94 2.15 2.65 2.65 0 0 1-1.79 2.6 4.69 4.69 0 0 1 1 .91 18.31 18.31 0 0 1 1.36 2q.55.9.89 1.35l.56.76h-1.8l-.46-.7-.09-.13-.29-.42-.47-.77-.51-.83a8.18 8.18 0 0 0-.86-1 3.28 3.28 0 0 0-.7-.56 2.38 2.38 0 0 0-1.06-.17h-.39v4.6zm2-9.29h-.45v3.34h.58a4.27 4.27 0 0 0 1.58-.2 1.48 1.48 0 0 0 .67-.59 1.72 1.72 0 0 0 .24-.9 1.61 1.61 0 0 0-.26-.9 1.42 1.42 0 0 0-.75-.57 5.38 5.38 0 0 0-1.61-.18zM214.23 6.3h1.51v10.57h-1.51zM229.6 17.54L228.08 19a6.89 6.89 0 0 1-1.49-.25 9.8 9.8 0 0 1-1.57-.59 16.73 16.73 0 0 1-2.13-1.29 5.26 5.26 0 0 1-3.18-1.87 5.15 5.15 0 0 1-1.25-3.42 5.21 5.21 0 0 1 1.61-3.92 6.14 6.14 0 0 1 8.15 0 5.11 5.11 0 0 1 1.62 3.87 5.25 5.25 0 0 1-1.23 3.47 5.33 5.33 0 0 1-3.17 1.87l.4.15a8.76 8.76 0 0 0 2.69.72 3.38 3.38 0 0 0 1.07-.2zm-5.45-10a4 4 0 0 0-2.95 1.15 3.9 3.9 0 0 0-1.16 2.9 3.77 3.77 0 0 0 1.17 2.83 4.35 4.35 0 0 0 5.88 0 3.82 3.82 0 0 0 1.19-2.85 3.83 3.83 0 0 0-1.17-2.87 4.09 4.09 0 0 0-2.97-1.12zM239.92 6.3h1.52v6a7.14 7.14 0 0 1-.18 1.84 4 4 0 0 1-.44 1 3.32 3.32 0 0 1-.64.74 5.59 5.59 0 0 1-6.6 0 3.41 3.41 0 0 1-.64-.75 3.87 3.87 0 0 1-.43-1 7.49 7.49 0 0 1-.17-1.88v-6h1.52v6a4.46 4.46 0 0 0 .34 2.07 2.43 2.43 0 0 0 1 .93 3.59 3.59 0 0 0 1.64.35 3.32 3.32 0 0 0 2.19-.7 2.18 2.18 0 0 0 .64-.89 5.51 5.51 0 0 0 .2-1.76zM244.56 6.3h6v1.34h-4.48v3.22h4.33v1.35h-4.33v3.28h4.62v1.35h-6.14z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Afrique
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 gccobV">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-49283281"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Pourquoi vous pouvez faire confiance à BBC News
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-36826639"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Conditions d'utilisation
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-36826641"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    A propos de la BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-36826642"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Politique de confidentialité
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cookies
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-36826644"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Contactez la BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. La BBC n'est pas responsable du contenu des sites externes.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Découvrez notre approche en matière de liens externes.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`Snapshot test for /afrique/articles/cz216x22106o For the Canonical platform I can see the server-rendered HTML 1`] = `
<html lang="fr"
      class="no-js"
      dir="ltr"
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          name="description"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="fr"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud - BBC News Afrique"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/afrique/articles/cz216x22106o"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcafrique"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News Afrique"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcafrique"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud - BBC News Afrique"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-09-27T14:48:28.548Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-12T12:58:14.950Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud - BBC News Afrique
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/afrique/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/afrique/articles/cz216x22106o"
    >
    <link data-react-helmet="true"
          rel="amphtml"
          href="http://localhost:7080/afrique/articles/cz216x22106o.amp"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/afrique/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/afrique/articles/cz216x22106o","publisher":{"@type":"NewsMediaOrganization","name":"BBC News Afrique","publishingPrinciples":"https://www.bbc.com/afrique/institutionelles-49283281","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/afrique/articles/cz216x22106o","name":"CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud"},"headline":"CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud","datePublished":"2019-07-12T12:58:14.950Z","dateModified":"2019-09-27T14:48:28.548Z","author":{"@type":"NewsMediaOrganization","name":"BBC News Afrique","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"},"noBylinesPolicy":"https://www.bbc.com/afrique/institutionelles-49283281#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/cz216x22106o/p01k6msp/fr"}
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/afrique"
               class="StyledLink-m3awbo-2 dkNCcx"
            >
              <svg height="24"
                   viewbox="0 0 250.7 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 hSXWXp"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M187.89 6.24H189l4.74 10.63h-1.55l-1.41-3.13h-4.51l-1.32 3.13h-1.56zm2.22 6.15l-1.71-3.83-1.58 3.83zM195.73 6.3h5.64v1.34h-4.12v3h4.13v1.35h-4.12v4.93h-1.51zM204 16.87V6.3h2.65a3.82 3.82 0 0 1 2.55.79 2.66 2.66 0 0 1 .94 2.15 2.65 2.65 0 0 1-1.79 2.6 4.69 4.69 0 0 1 1 .91 18.31 18.31 0 0 1 1.36 2q.55.9.89 1.35l.56.76h-1.8l-.46-.7-.09-.13-.29-.42-.47-.77-.51-.83a8.18 8.18 0 0 0-.86-1 3.28 3.28 0 0 0-.7-.56 2.38 2.38 0 0 0-1.06-.17h-.39v4.6zm2-9.29h-.45v3.34h.58a4.27 4.27 0 0 0 1.58-.2 1.48 1.48 0 0 0 .67-.59 1.72 1.72 0 0 0 .24-.9 1.61 1.61 0 0 0-.26-.9 1.42 1.42 0 0 0-.75-.57 5.38 5.38 0 0 0-1.61-.18zM214.23 6.3h1.51v10.57h-1.51zM229.6 17.54L228.08 19a6.89 6.89 0 0 1-1.49-.25 9.8 9.8 0 0 1-1.57-.59 16.73 16.73 0 0 1-2.13-1.29 5.26 5.26 0 0 1-3.18-1.87 5.15 5.15 0 0 1-1.25-3.42 5.21 5.21 0 0 1 1.61-3.92 6.14 6.14 0 0 1 8.15 0 5.11 5.11 0 0 1 1.62 3.87 5.25 5.25 0 0 1-1.23 3.47 5.33 5.33 0 0 1-3.17 1.87l.4.15a8.76 8.76 0 0 0 2.69.72 3.38 3.38 0 0 0 1.07-.2zm-5.45-10a4 4 0 0 0-2.95 1.15 3.9 3.9 0 0 0-1.16 2.9 3.77 3.77 0 0 0 1.17 2.83 4.35 4.35 0 0 0 5.88 0 3.82 3.82 0 0 0 1.19-2.85 3.83 3.83 0 0 0-1.17-2.87 4.09 4.09 0 0 0-2.97-1.12zM239.92 6.3h1.52v6a7.14 7.14 0 0 1-.18 1.84 4 4 0 0 1-.44 1 3.32 3.32 0 0 1-.64.74 5.59 5.59 0 0 1-6.6 0 3.41 3.41 0 0 1-.64-.75 3.87 3.87 0 0 1-.43-1 7.49 7.49 0 0 1-.17-1.88v-6h1.52v6a4.46 4.46 0 0 0 .34 2.07 2.43 2.43 0 0 0 1 .93 3.59 3.59 0 0 0 1.64.35 3.32 3.32 0 0 0 2.19-.7 2.18 2.18 0 0 0 .64-.89 5.51 5.51 0 0 0 .2-1.76zM244.56 6.3h6v1.34h-4.48v3.22h4.33v1.35h-4.33v3.28h4.62v1.35h-6.14z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Afrique
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 foxPXR"
            >
              Aller au contenu
            </a>
          </div>
        </div>
      </header>
      <noscript>
        <img height="1px"
             width="1px"
             alt
             style="position:absolute"
             src="https://logws1363.ati-host.net?s=598343&amp;s2=3&amp;p=afrique.articles.cz216x22106o.page&amp;x1=[urn:bbc:optimo:cz216x22106o]&amp;x2=[responsive]&amp;x3=[news-afrique]&amp;x4=[fr]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[CAN+2019+:+Le+Nigéria+file+en+demi-finales+au+détriment+de+l'Afrique+du+Sud]&amp;x11=[2019-07-12T12:58:14.950Z]&amp;x12=[2019-09-27T14:48:28.548Z]"
        >
      </noscript>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 cBtcWN"
            >
              C'est le titre de cet article de test
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/2571/test/a4699550-e135-11e9-b23c-f1ac9644bb55.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/2571/test/a4699550-e135-11e9-b23c-f1ac9644bb55.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/2571/test/a4699550-e135-11e9-b23c-f1ac9644bb55.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/2571/test/a4699550-e135-11e9-b23c-f1ac9644bb55.jpg 624w"
                         alt="Carte de France montrant Paris et Cognac"
                         src="https://ichef.bbci.co.uk/news/640/cpsdevpb/2571/test/a4699550-e135-11e9-b23c-f1ac9644bb55.jpg"
                         width="624"
                         class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                    >
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 emSaHV">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Légende image,
                    </span>
                    <p>
                      Cette image test, sous copyright BBC, montre une carte de la France. L'image est dans les trois premiers blocs et porte cette légende.
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-12"
                  class="StyledTimestamp-um718p-0 bAgcOD"
            >
              12 juillet 2019
            </time>
            <div>
              <time datetime="2019-09-27"
                    class="StyledTimestamp-um718p-0 bAgcOD"
              >
                Mise à jour 27 septembre 2019
              </time>
            </div>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Ceci est un bloc de texte contenant un lien URL vers
              <a href="https://www.bbc.co.uk/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                la page d'accueil BBC Weather
              </a>
              .
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <div class="StyledPlaceholder-sc-11nyhtu-0 dDNqOp">
                  <div class="GuidanceWrapper-sc-1wm6qsk-0 bbhfNU">
                    <strong class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO guidance-message"
                            aria-hidden="true"
                    >
                      Contains strong language and adult humour.
                    </strong>
                    <noscript class="StyledNoScript-sc-1wm6qsk-2 fsOOOd">
                      <strong class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO">
                        Pour regarder ce contenu, veuillez activer JavaScript ou essayer un autre navigateur.
                      </strong>
                    </noscript>
                  </div>
                  <button class="Button-sc-34e3rb-0 eSkqnH StyledPlayButton-sc-11nyhtu-1 bBTuxK">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Contains strong language and adult humour. Play video, "Five things ants can teach us about management", Duration 3,11
                    </span>
                    <div aria-hidden="true"
                         class="IconWrapper-sc-34e3rb-1 jGavfg"
                    >
                      <svg viewbox="0 0 32 32"
                           width="12px"
                           height="12px"
                           focusable="false"
                           aria-hidden="true"
                           class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                      >
                        <polygon points="3,32 29,16 3,0">
                        </polygon>
                      </svg>
                    </div>
                    <time datetime="PT3M11S"
                          aria-hidden="true"
                          class="TimeDuration-sc-34e3rb-2 cZLyLe"
                    >
                      03:11
                    </time>
                  </button>
                  <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                       alt
                       src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                       class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  >
                </div>
              </div>
              <figcaption class="Caption-sc-16x70so-0 emSaHV">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Légende vidéo,
                </span>
                <p>
                  Ceci est un bloc vidéo contenant une vidéo sur les fourmis
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="Ceci-est-un-bloc-de-soustitre"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 ihltMQ"
            >
              Ceci est un bloc de sous-titre
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <div class="lazyload-placeholder">
                    </div>
                    <noscript>
                      <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/fef7/test/d4cc0ed0-e135-11e9-b23c-f1ac9644bb55.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/fef7/test/d4cc0ed0-e135-11e9-b23c-f1ac9644bb55.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/fef7/test/d4cc0ed0-e135-11e9-b23c-f1ac9644bb55.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/fef7/test/d4cc0ed0-e135-11e9-b23c-f1ac9644bb55.jpg 624w, https://ichef.bbci.co.uk/news/800/cpsdevpb/fef7/test/d4cc0ed0-e135-11e9-b23c-f1ac9644bb55.jpg 800w"
                           alt="Footballeurs après un match"
                           src="https://ichef.bbci.co.uk/news/640/cpsdevpb/fef7/test/d4cc0ed0-e135-11e9-b23c-f1ac9644bb55.jpg"
                           width="2048"
                           class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                      >
                    </noscript>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        Image source,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Cet article de test a été créé afin que nous puissions exécuter des tests automatisés de bout en bout sur notre site Web.
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/afrique"
               class="StyledLink-m3awbo-2 dkNCcx"
            >
              <svg height="24"
                   viewbox="0 0 250.7 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 hSXWXp"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M187.89 6.24H189l4.74 10.63h-1.55l-1.41-3.13h-4.51l-1.32 3.13h-1.56zm2.22 6.15l-1.71-3.83-1.58 3.83zM195.73 6.3h5.64v1.34h-4.12v3h4.13v1.35h-4.12v4.93h-1.51zM204 16.87V6.3h2.65a3.82 3.82 0 0 1 2.55.79 2.66 2.66 0 0 1 .94 2.15 2.65 2.65 0 0 1-1.79 2.6 4.69 4.69 0 0 1 1 .91 18.31 18.31 0 0 1 1.36 2q.55.9.89 1.35l.56.76h-1.8l-.46-.7-.09-.13-.29-.42-.47-.77-.51-.83a8.18 8.18 0 0 0-.86-1 3.28 3.28 0 0 0-.7-.56 2.38 2.38 0 0 0-1.06-.17h-.39v4.6zm2-9.29h-.45v3.34h.58a4.27 4.27 0 0 0 1.58-.2 1.48 1.48 0 0 0 .67-.59 1.72 1.72 0 0 0 .24-.9 1.61 1.61 0 0 0-.26-.9 1.42 1.42 0 0 0-.75-.57 5.38 5.38 0 0 0-1.61-.18zM214.23 6.3h1.51v10.57h-1.51zM229.6 17.54L228.08 19a6.89 6.89 0 0 1-1.49-.25 9.8 9.8 0 0 1-1.57-.59 16.73 16.73 0 0 1-2.13-1.29 5.26 5.26 0 0 1-3.18-1.87 5.15 5.15 0 0 1-1.25-3.42 5.21 5.21 0 0 1 1.61-3.92 6.14 6.14 0 0 1 8.15 0 5.11 5.11 0 0 1 1.62 3.87 5.25 5.25 0 0 1-1.23 3.47 5.33 5.33 0 0 1-3.17 1.87l.4.15a8.76 8.76 0 0 0 2.69.72 3.38 3.38 0 0 0 1.07-.2zm-5.45-10a4 4 0 0 0-2.95 1.15 3.9 3.9 0 0 0-1.16 2.9 3.77 3.77 0 0 0 1.17 2.83 4.35 4.35 0 0 0 5.88 0 3.82 3.82 0 0 0 1.19-2.85 3.83 3.83 0 0 0-1.17-2.87 4.09 4.09 0 0 0-2.97-1.12zM239.92 6.3h1.52v6a7.14 7.14 0 0 1-.18 1.84 4 4 0 0 1-.44 1 3.32 3.32 0 0 1-.64.74 5.59 5.59 0 0 1-6.6 0 3.41 3.41 0 0 1-.64-.75 3.87 3.87 0 0 1-.43-1 7.49 7.49 0 0 1-.17-1.88v-6h1.52v6a4.46 4.46 0 0 0 .34 2.07 2.43 2.43 0 0 0 1 .93 3.59 3.59 0 0 0 1.64.35 3.32 3.32 0 0 0 2.19-.7 2.18 2.18 0 0 0 .64-.89 5.51 5.51 0 0 0 .2-1.76zM244.56 6.3h6v1.34h-4.48v3.22h4.33v1.35h-4.33v3.28h4.62v1.35h-6.14z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Afrique
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 gccobV">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-49283281"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Pourquoi vous pouvez faire confiance à BBC News
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-36826639"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Conditions d'utilisation
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-36826641"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    A propos de la BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-36826642"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Politique de confidentialité
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cookies
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/afrique/institutionelles-36826644"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Contactez la BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. La BBC n'est pas responsable du contenu des sites externes.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Découvrez notre approche en matière de liens externes.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
    <script>
      window.SIMORGH_DATA={"status":200,"pageData":{"metadata":{"id":"mock-id","locators":{"optimoUrn":"urn:bbc:optimo:asset:cz216x22106o"},"type":"article","createdBy":"Afrique","language":"fr","lastUpdated":1570198604847,"firstPublished":1562936294950,"lastPublished":1569595708548,"options":{},"analyticsLabels":{},"passport":{"language":"fr","home":"http://www.bbc.co.uk/ontologies/passport/home/Afrique"},"tags":{},"version":"v1.1.2","blockTypes":["headline","text","paragraph","fragment","image","caption","altText","rawImage","urlLink","video","subheadline"]},"content":{"model":{"blocks":[{"type":"headline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"C'est le titre de cet article de test","blocks":[{"type":"fragment","model":{"text":"C'est le titre de cet article de test","attributes":[]},"id":"mock-id","position":[1,1,1,1]}]},"id":"mock-id","position":[1,1,1]}]},"id":"mock-id","position":[1,1]}]},"id":"mock-id","position":[1]},{"type":"image","model":{"blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Cette image test, sous copyright BBC, montre une carte de la France. L'image est dans les trois premiers blocs et porte cette légende.","blocks":[{"type":"fragment","model":{"text":"Cette image test, sous copyright BBC, montre une carte de la France. L'image est dans les trois premiers blocs et porte cette légende.","attributes":[]},"id":"mock-id","position":[2,1,1,1,1]}]},"id":"mock-id","position":[2,1,1,1]}]},"id":"mock-id","position":[2,1,1]}]},"id":"mock-id","position":[2,1]},{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Carte de France montrant Paris et Cognac","blocks":[{"type":"fragment","model":{"text":"Carte de France montrant Paris et Cognac","attributes":[]},"id":"mock-id","position":[2,2,1,1,1]}]},"id":"mock-id","position":[2,2,1,1]}]},"id":"mock-id","position":[2,2,1]}]},"id":"mock-id","position":[2,2]},{"type":"rawImage","model":{"width":624,"height":351,"locator":"2571/test/a4699550-e135-11e9-b23c-f1ac9644bb55.jpg","originCode":"cpsdevpb","copyrightHolder":"BBC"},"id":"mock-id","position":[2,3]}]},"id":"mock-id","position":[2]},{"type":"timestamp","model":{"firstPublished":1562936294950,"lastPublished":1569595708548},"id":"mock-id","position":[3]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Ceci est un bloc de texte contenant un lien URL vers la page d'accueil BBC Weather.","blocks":[{"type":"fragment","model":{"text":"Ceci est un bloc de texte contenant un lien URL vers ","attributes":[]},"id":"mock-id","position":[4,1,1]},{"type":"urlLink","model":{"text":"la page d'accueil BBC Weather","blocks":[{"type":"fragment","model":{"text":"la page d'accueil BBC Weather","attributes":[]},"id":"mock-id","position":[4,1,2,1]}],"locator":"https://www.bbc.co.uk/weather","isExternal":false},"id":"mock-id","position":[4,1,2]},{"type":"fragment","model":{"text":".","attributes":[]},"id":"mock-id","position":[4,1,3]}]},"id":"mock-id","position":[4,1]}]},"id":"mock-id","position":[4]},{"type":"video","model":{"locator":"urn:bbc:pips:pid:p01k6msm","blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Ceci est un bloc vidéo contenant une vidéo sur les fourmis","blocks":[{"type":"fragment","model":{"text":"Ceci est un bloc vidéo contenant une vidéo sur les fourmis","attributes":[]},"id":"mock-id","position":[5,1,1,1,1]}]},"id":"mock-id","position":[5,1,1,1]}]},"id":"mock-id","position":[5,1,1]}]},"id":"mock-id","position":[5,1]},{"type":"aresMedia","model":{"blocks":[{"blockId":"urn:bbc:ares::clip:p01k6msm","type":"aresMediaMetadata","model":{"id":"mock-id","subType":"clip","format":"audio_video","title":"Five things ants can teach us about management","synopses":{"short":"They may be tiny, but us humans could learn a thing or two from ants."},"imageUrl":"ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg","imageCopyright":"BBC","embedding":true,"advertising":true,"versions":[{"versionId":"p01k6msp","types":["Original"],"duration":191,"durationISO8601":"PT3M11S","warnings":{"short":"Contains strong language and adult humour.","long":"Contains strong language and adult humour."},"availableTerritories":{"uk":true,"nonUk":true},"availableFrom":1540218932000}],"syndication":{"destinations":[]}},"id":"mock-id","position":[5,2,1]},{"type":"image","model":{"blocks":[{"type":"rawImage","model":{"width":1920,"height":1080,"locator":"ichef.test.bbci.co.uk/images/ic/$widthxn/p01k6mtv.jpg","originCode":"mpv","copyrightHolder":"BBC"},"id":"mock-id","position":[5,2,2,1]},{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Ants","blocks":[{"type":"fragment","model":{"text":"Ants","attributes":[]},"id":"mock-id","position":[5,2,2,2,1,1,1]}]},"id":"mock-id","position":[5,2,2,2,1,1]}]},"id":"mock-id","position":[5,2,2,2,1]}]},"id":"mock-id","position":[5,2,2,2]}]},"id":"mock-id","position":[5,2,2]}]},"id":"mock-id","position":[5,2]}]},"id":"mock-id","position":[5]},{"type":"subheadline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Ceci est un bloc de sous-titre","blocks":[{"type":"fragment","model":{"text":"Ceci est un bloc de sous-titre","attributes":[]},"id":"mock-id","position":[6,1,1,1]}]},"id":"mock-id","position":[6,1,1]}]},"id":"mock-id","position":[6,1]}]},"id":"mock-id","position":[6]},{"type":"image","model":{"blocks":[{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Footballeurs après un match","blocks":[{"type":"fragment","model":{"text":"Footballeurs après un match","attributes":[]},"id":"mock-id","position":[7,1,1,1,1]}]},"id":"mock-id","position":[7,1,1,1]}]},"id":"mock-id","position":[7,1,1]}]},"id":"mock-id","position":[7,1]},{"type":"rawImage","model":{"width":2048,"height":1152,"locator":"fef7/test/d4cc0ed0-e135-11e9-b23c-f1ac9644bb55.jpg","originCode":"cpsdevpb","copyrightHolder":"Getty Images"},"id":"mock-id","position":[7,2]}]},"id":"mock-id","position":[7]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Cet article de test a été créé afin que nous puissions exécuter des tests automatisés de bout en bout sur notre site Web.","blocks":[{"type":"fragment","model":{"text":"Cet article de test a été créé afin que nous puissions exécuter des tests automatisés de bout en bout sur notre site Web.","attributes":[]},"id":"mock-id","position":[8,1,1]}]},"id":"mock-id","position":[8,1]}]},"id":"mock-id","position":[8]}]}},"promo":{"headlines":{"seoHeadline":"CAN 2019 : Le Nigéria file en demi-finales au détriment de l'Afrique du Sud"},"locators":{"optimoUrn":"urn:bbc:optimo:asset:cz216x22106o"},"summary":"","timestamp":1569595708548,"id":"mock-id","type":"cps"},"relatedContent":{"site":{"subType":"site","name":"Afrique","uri":"/afrique","type":"simple"},"groups":[]}},"path":"/afrique/articles/cz216x22106o","timeOnServer": "mock-time"}
    </script>
    <div>
      <!--[if !IE]><!-->
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="text/javascript"
            crossorigin="anonymous"
            defer
    >
      [1]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-253ae210.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-0f485567.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-1f20a385.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-678f84af.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-10e2e882.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-d0ae3f07.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-f71cff67.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="afrique"
            src="http://localhost:7080/static/js/afrique-31ecd969.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <div>
    </div>
    <script type="text/javascript">
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
